commenting out trials

--- a/views/homelayout.erb
+++ b/views/homelayout.erb
@@ -18,11 +18,11 @@
     <%= erb :"partials/_nav"%>
   </div>
   <div class="pure-u-2-3">
-    <% if @err %>
-        <%= erb :"errorpage"%>
-  <% else %>
+    <!--<% if @err %>-->
+        <!--<%= erb :"errorpage"%>-->
+  <!--<% else %>-->
         <%= erb :"home"%>
-  <% end %>
+  <!--<% end %>-->
   </div>
 </div>
 
