--- a/views/public/homelayout.erb
+++ b/views/public/homelayout.erb
@@ -5,24 +5,15 @@
         integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD"
         crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <style>
-    /*.header{*/
-      /*background-color: red;*/
-    /*}*/
-  </style>
   <title>LineUp</title>
 </head>
 <body>
 <div class="pure-g">
   <div class="pure-u-1-3">
-    <%= erb :"partials/_nav"%>
+    <%= erb :"public/partials/_nav"%>
   </div>
   <div class="pure-u-2-3">
-    <!--<% if @err %>-->
-        <!--<%= erb :"errorpage"%>-->
-  <!--<% else %>-->
-        <%= erb :"home"%>
-  <!--<% end %>-->
+        <%= erb :"public/home"%>
   </div>
 </div>
 
