--- a/views/user/profile.erb
+++ b/views/user/profile.erb
@@ -11,7 +11,9 @@
     <%= erb :"user/partials/_menu"%>
   </div>
   <div class="twelve wide column" style="background-color: #f44336">
-    <p>the meat is ready</p>
+    <div>
+      <p>Welcome </p>
+    </div>
   </div>
 </div>
 
