--- a/views/public/home.erb
+++ b/views/public/home.erb
@@ -7,7 +7,7 @@
     </p>
     <br>
     <br>
-    <a class="pure-button gros-button" href="/error">Enregistres-toi!</a>
+    <a class="pure-button gros-button" href="/signup">Enregistres-toi!</a>
     <a class="pure-button gros-button" href="/profile">Connexion</a>
   </div>
 
