--- a/views/user/partials/_menu.erb
+++ b/views/user/partials/_menu.erb
@@ -6,9 +6,9 @@
   </div>
   <div class="item">
     <div class="menu">
-      <a class="active item">Search</a>
-      <a class="item">Add</a>
-      <a class="item">Remove</a>
+      <a class="item">Profile</a>
+      <a class="item">Settings</a>
+      <a class="item">LogOut</a>
     </div>
   </div>
 </div>
