--- a/views/public/signup.erb
+++ b/views/public/signup.erb
@@ -6,14 +6,27 @@
 	<title>Sign up form</title>
 </head>
 <body>
-<div class="ui grid">
-	<div class="four wide column">
-		<%= erb :"user/partials/_menu"%>
-	</div>
-	<div class="twelve wide column" style="background-color: #f44336">
-		<div>
-			<p>Welcome </p>
-		</div>
+<div class="ui four column centered grid">
+	<div class="column" style="background-color: #f44336">
+			<form class="ui form" action="/welcome" method="post">
+        <div class="field">
+          <label>First name</label>
+          <input type="text" name="firstname" placeholder="Leila">
+        </div>
+        <div class="field">
+          <label>Last name</label>
+          <input type="text" name="lastname" placeholder="Compaore">
+        </div>
+        <div class="field">
+          <label>Email</label>
+          <input type="email" name="email" placeholder="cleila2@live.fr">
+        </div>
+        <div class="field">
+          <label>Password</label>
+          <input type="password" name="password" placeholder="******">
+        </div>
+        <button class="ui button" type="submit">submit</button>
+			</form>
 	</div>
 </div>
 
