--- a/views/public/signup.erb
+++ b/views/public/signup.erb
@@ -2,34 +2,54 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.7/semantic.min.css">
-	<title>Sign up form</title>
+	<link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous">	<title>Just Sign up</title>
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body>
-<div class="ui four column centered grid">
-	<div class="column" style="background-color: #f44336">
-			<form class="ui form" action="/welcome" method="post">
-        <div class="field">
-          <label>First name</label>
-          <input type="text" name="firstname" placeholder="Leila">
-        </div>
-        <div class="field">
-          <label>Last name</label>
-          <input type="text" name="lastname" placeholder="Compaore">
-        </div>
-        <div class="field">
-          <label>Email</label>
-          <input type="email" name="email" placeholder="cleila2@live.fr">
-        </div>
-        <div class="field">
-          <label>Password</label>
-          <input type="password" name="password" placeholder="******">
-        </div>
-        <button class="ui button" type="submit">submit</button>
+<div>
+	<div class="pure-g">
+		<div class="pure-u-6-24">
+		</div>
+
+		<div class="pure-u-12-24" >
+			<form class="pure-form pure-form-aligned" style="background-color: pink">
+				<fieldset>
+					<legend>Personal information</legend>
+					<label>First name</label>
+						<input type="text" placeholder="firstname" name="fname"/>
+						<label>Last name</label>
+						<input type="text" placeholder="lastname" name="lname"/><br />
+						<label>email address</label>
+						<input type="email" placeholder="email" name="email"/>
+						<label>Password</label>
+						<input type="password" name="password"/>
+					<legend>School information</legend>
+					<label>University</label>
+						<select>
+							<option value="uOttawa">University of Ottawa</option>
+							<option value="uCarleton">Carleton University</option>
+						</select><br />
+						<label>Faculty</label>
+						<select>
+							<option value="eng">Engineering faculty</option>
+							<option value="art">Art faculty</option>
+						</select><br />
+						<label>Telephone number</label>
+						<input type="tel" placeholder="telephone number (this is optionnal)" name="tel"/><br />
+				</fieldset>
+				<button type="submit" class="pure-button pure-button-primary">Submit</button>
 			</form>
+			<div>
+				<a class="pure-button" href="/">
+					<i class="fa fa-long-arrow-left"></i>
+					Back
+				</a>
+			</div>
+		</div>
+		<div class="pure-u-6-24">
+		</div>
 	</div>
 </div>
-
 
 </body>
 </html>
