admin signup done

--- a/views/public/home.erb
+++ b/views/public/home.erb
@@ -9,6 +9,7 @@
     <br>
     <a class="pure-button gros-button" href="/signup">Enregistres-toi!</a>
     <a class="pure-button gros-button" href="/profile">Connexion</a>
+    <a class="pure-button gros-button" href="/signupadmin">Admin</a>
   </div>
 
 
