--- a/views/public/signupadmin.erb
+++ b/views/public/signupadmin.erb
@@ -12,8 +12,8 @@
 		</div>
 
 		<div class="pure-u-12-24" >
-			<h3>Student signup page</h3><br /><br />
-			<form action="/signup" method="post" class="pure-form pure-form-aligned" style="background-color: pink">
+      <h3>This is the admin signup page</h3><br /><br />
+			<form action="/signupadmin" method="post" class="pure-form pure-form-aligned" style="background-color: pink">
 				<fieldset>
 					<legend>Personal information</legend>
 					<label>First name</label>
