--- a/views/public/home.erb
+++ b/views/public/home.erb
@@ -8,7 +8,7 @@
     <br>
     <br>
     <a class="pure-button gros-button" href="/signup">Enregistres-toi!</a>
-    <a class="pure-button gros-button" href="/profile">Connexion</a>
+    <a class="pure-button gros-button" href="/signin">Connexion</a>
     <a class="pure-button gros-button" href="/signupadmin">Admin</a>
   </div>
 
