profile in the making —switching from semanticUI to purecss

--- a/views/public/home.erb
+++ b/views/public/home.erb
@@ -10,6 +10,7 @@
     <a class="pure-button gros-button" href="/signup">Enregistres-toi!</a>
     <a class="pure-button gros-button" href="/signin">Connexion</a>
     <a class="pure-button gros-button" href="/signupadmin">Admin</a>
+    <a class="pure-button gros-button" href="/profile">Profile</a>
   </div>
 
 
