--- a/views/user/partials/_menu.erb
+++ b/views/user/partials/_menu.erb
@@ -1,15 +1,22 @@
-<div class="ui vertical menu" style="width: 100%">
-  <div class="item">
-    <div class="menu">
-      <i class="massive home icon"></i>
-    </div>
-  </div>
-  <div class="item">
-    <div class="menu">
-      <a class="item">Profile</a>
-      <a class="item">Settings</a>
-      <a class="item">LogOut</a>
-    </div>
-  </div>
+<div class="pure-menu">
+  <ul class="pure-menu-list">
+    <li class="pure-menu-item">
+      <a href="" class="pure-menu-link">
+        <i class="fa fa-long-arrow-left"></i>
+        Profile
+      </a>
+    </li>
+    <li class="pure-menu-item">
+      <a href="" class="pure-menu-link">
+        <i class="fa fa-long-arrow-left"></i>
+        Settings
+      </a>
+    </li>
+    <li class="pure-menu-item">
+      <a href="" class="pure-menu-link">
+        <i class="fa fa-long-arrow-left"></i>
+        LogOut
+      </a>
+    </li>
+  </ul>
 </div>
-
