--- a/views/user/profile.erb
+++ b/views/user/profile.erb
@@ -2,15 +2,16 @@
 <html>
 <head>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.7/semantic.min.css">
   <title>Welcome Jane Doe</title>
+  <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body>
-<div class="ui grid">
-  <div class="four wide column">
+<div class="pure-g">
+  <div class="pure-u-1-5">
     <%= erb :"user/partials/_menu"%>
   </div>
-  <div class="twelve wide column" style="background-color: #f44336">
+  <div class="pure-u-4-5" style="background-color: #f44336">
     <div>
       <p>Welcome </p>
     </div>
