setting up the db to render APIs in index.rb

--- a/views/index.erb
+++ b/views/index.erb
@@ -8,9 +8,9 @@
   <h1>Welcome fam</h1>
   <p> <%= @name %></p>
   <p>
-    <% for a in @posts %>
+    <!-- <% for a in @posts %>
   <span><%= a["id"] %></span><br>
-<% end %>
+<% end %> -->
   </p>
   <form action="/" method="post">
     <input type="text" name="name"/>
