--- a/views/user/profile.erb
+++ b/views/user/profile.erb
@@ -30,29 +30,7 @@
     menu
     -->
     <div class="pure-u-1-5" id="menu">
-      <div class="pure-menu">
-        <ul class="pure-menu-list">
-          <li class="pure-menu-item">
-            <a href="" class="pure-menu-link">
-              <i class="fa fa-long-arrow-left"></i>
-              Profile
-            </a>
-          </li>
-          <li class="pure-menu-item">
-            <a href="" class="pure-menu-link">
-              <i class="fa fa-long-arrow-left"></i>
-              Settings
-            </a>
-          </li>
-          <li class="pure-menu-item">
-            <a href="" class="pure-menu-link">
-              <i class="fa fa-long-arrow-left"></i>
-              LogOut
-            </a>
-          </li>
-        </ul>
-      </div>
-
+      <%= erb :"user/partials/_menu"%>
     </div>
 
     <div class="pure-u-4-5">
