profile menu in the making

--- a/views/user/partials/_menu.erb
+++ b/views/user/partials/_menu.erb
@@ -1,20 +1,20 @@
 <div class="pure-menu">
   <ul class="pure-menu-list">
     <li class="pure-menu-item">
+      <i class="ion-person"></i>
       <a href="" class="pure-menu-link">
-        <i class="fa fa-long-arrow-left"></i>
         Profile
       </a>
     </li>
     <li class="pure-menu-item">
+      <i class="ion-gear-a"></i>
       <a href="" class="pure-menu-link">
-        <i class="fa fa-long-arrow-left"></i>
         Settings
       </a>
     </li>
     <li class="pure-menu-item">
+      <i class="ion-log-out"></i>
       <a href="" class="pure-menu-link">
-        <i class="fa fa-long-arrow-left"></i>
         LogOut
       </a>
     </li>
