--- a/views/user/profile.erb
+++ b/views/user/profile.erb
@@ -4,7 +4,10 @@
   <meta charset="utf-8" />
   <title>Welcome Jane Doe</title>
   <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous">
+
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+<link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
+
   <style>
   body{
     color: white;
@@ -12,14 +15,31 @@
   #menu {
     background-color: #C5C1C0;
   }
-  .pure-menu-link {
-    color: white;
-  }
   #stats{
     background-color: #F7CE3E;
   }
   #content {
     background-color: #1A2930;
+  }
+  .pure-menu{
+    height: 100vh;
+  }
+  .pure-menu-link {
+    color: black;
+    padding-right: 0;
+    padding-left: 0;
+  }
+  .pure-menu-item {
+    height: 20%;
+    margin: 20px 0;
+    line-height: 5px;
+    text-align: center;
+    background-color: pink;
+    border-radius: 10px;
+    /*width: 50%*/
+  }
+  i{
+    font-size: 50px;
   }
   </style>
 </head>
@@ -29,11 +49,11 @@
     <!--
     menu
     -->
-    <div class="pure-u-1-5" id="menu">
+    <div class="pure-u-2-24" id="menu">
       <%= erb :"user/partials/_menu"%>
     </div>
 
-    <div class="pure-u-4-5">
+    <div class="pure-u-22-24">
       <!--
       statistics
       -->
