--- a/views/user/profile.erb
+++ b/views/user/profile.erb
@@ -77,6 +77,23 @@
   /*content*/
   #content {
     height: 70vh;
+    display: flex;
+  }
+  .queueDisplay {
+    width: 50%;
+    border-style: solid;
+    border-width: 2px;
+    overflow: scroll;
+  }
+  .singlequeue{
+    text-align: center;
+    background-color: #2d4753;
+    margin: 10px 0;
+    padding: 15px 0;
+    border-radius: 25px;
+  }
+  .pure-button {
+    border-radius: 10%;
   }
   p{
     margin-top: 0;
@@ -117,8 +134,140 @@
       files en actions
       -->
       <div id="content">
-        <div>
-          <p>Active queues</p>
+        <div class="queueDisplay">
+          <h2>the queues you re enrolled in</h2>
+          <div class="singlequeue">
+            <div>
+              <span><b>title</b></span>
+              <p>
+                you have 45 people ahead of you
+              </p>
+            </div>
+            <div>
+              <a href="#" class="pure-button pure-button-primary">details</a>
+              <button class="pure-button pure-button-primary">quit</button>
+            </div>
+          </div>
+          <div class="singlequeue">
+            <div>
+              <span><b>title</b></span>
+              <p>
+                you have 45 people ahead of you
+              </p>
+            </div>
+            <div>
+              <a href="#" class="pure-button pure-button-primary">details</a>
+              <button class="pure-button pure-button-primary">quit</button>
+            </div>
+          </div>
+          <div class="singlequeue">
+            <div>
+              <span><b>title</b></span>
+              <p>
+                you have 45 people ahead of you
+              </p>
+            </div>
+            <div>
+              <a href="#" class="pure-button pure-button-primary">details</a>
+              <button class="pure-button pure-button-primary">quit</button>
+            </div>
+          </div>
+          <div class="singlequeue">
+            <div>
+              <span><b>title</b></span>
+              <p>
+                you have 45 people ahead of you
+              </p>
+            </div>
+            <div>
+              <a href="#" class="pure-button pure-button-primary">details</a>
+              <button class="pure-button pure-button-primary">quit</button>
+            </div>
+          </div>
+          <div class="singlequeue">
+            <span><b>title</b></span>
+            <p>
+              you have 45 people ahead of you
+            </p>
+            <a href="#" class="pure-button pure-button-primary">details</a>
+            <button class="pure-button pure-button-primary">quit</button>
+          </div>
+        </div>
+
+        <div class="queueDisplay">
+          <h2>the queues you manage</h2>
+          <div class="singlequeue">
+            <div>
+              <span><b>title</b></span>
+              <p>
+                you have 51 people to serve
+              </p>
+            </div>
+            <div>
+              <a href="#" class="pure-button pure-button-primary">details</a>
+              <button class="pure-button pure-button-primary">serve next</button>
+            </div>
+          </div>
+          <div class="singlequeue">
+            <div>
+              <span><b>title</b></span>
+              <p>
+                you have 51 people to serve
+              </p>
+            </div>
+            <div>
+              <a href="#" class="pure-button pure-button-primary">details</a>
+              <button class="pure-button pure-button-primary">serve next</button>
+            </div>
+          </div>
+          <div class="singlequeue">
+            <div>
+              <span><b>title</b></span>
+              <p>
+                you have 51 people to serve
+              </p>
+            </div>
+            <div>
+              <a href="#" class="pure-button pure-button-primary">details</a>
+              <button class="pure-button pure-button-primary">serve next</button>
+            </div>
+          </div>
+          <div class="singlequeue">
+            <div>
+              <span><b>title</b></span>
+              <p>
+                you have 51 people to serve
+              </p>
+            </div>
+            <div>
+              <a href="#" class="pure-button pure-button-primary">details</a>
+              <button class="pure-button pure-button-primary">serve next</button>
+            </div>
+          </div>
+          <div class="singlequeue">
+            <div>
+              <span><b>title</b></span>
+              <p>
+                you have 51 people to serve
+              </p>
+            </div>
+            <div>
+              <a href="#" class="pure-button pure-button-primary">details</a>
+              <button class="pure-button pure-button-primary">serve next</button>
+            </div>
+          </div>
+          <div class="singlequeue">
+            <div>
+              <span><b>title</b></span>
+              <p>
+                you have 51 people to serve
+              </p>
+            </div>
+            <div>
+              <a href="#" class="pure-button pure-button-primary">details</a>
+              <button class="pure-button pure-button-primary">serve next</button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
