--- a/views/public/signup.erb
+++ b/views/public/signup.erb
@@ -3,52 +3,47 @@
 <head>
 	<meta charset="utf-8" />
 	<link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous">	<title>Just Sign up</title>
-	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body>
 <div>
 	<div class="pure-g">
-		<div class="pure-u-6-24">
+
+		<div class="pure-u-1-3">
+			<h3>Student signup page</h3><br /><br />
+			<form class="pure-form pure-form-aligned" method="post" action="/signup">
+				<fieldset>
+					<div class="pure-control-group">
+						<label for="fname">First Name</label>
+						<input name="fname" type="text" placeholder="fname"/>
+					</div>
+					<div class="pure-control-group">
+						<label for="lname">Last Name</label>
+						<input name="lname" type="text" placeholder="lname"/>
+					</div>
+					<div class="pure-control-group">
+						<label for="email">Email</label>
+						<input name="email" type="email" placeholder="test@test.ca"/>
+					</div>
+					<div class="pure-control-group">
+						<label for="telephone">Telephone</label>
+						<input name="telephone" type="tel" placeholder="(XXX)XXX-XXXX"/>
+					</div>
+					<div class="pure-control-group">
+						<label for="password">Password</label>
+						<input name="password" type="password" placeholder="qwer"/>
+					</div>
+					<div class="pure-control-group">
+						<label></label>
+						<button type="submit" class="pure-button pure-button-primary">Submit</button>
+					</div>
+				</fieldset>
+			</form>
+			<a class="pure-button" href="/">
+				<i class="fa fa-long-arrow-left"></i>
+				Back
+			</a>
 		</div>
 
-		<div class="pure-u-12-24" >
-			<h3>Student signup page</h3><br /><br />
-			<form action="/signup" method="post" class="pure-form pure-form-aligned" style="background-color: pink">
-				<fieldset>
-					<legend>Personal information</legend>
-					<label>First name</label>
-						<input type="text" placeholder="firstname" name="fname"/>
-						<label>Last name</label>
-						<input type="text" placeholder="lastname" name="lname"/><br />
-						<label>email address</label>
-						<input type="email" placeholder="email" name="email"/>
-						<label>Password</label>
-						<input type="password" name="password"/>
-					<legend>School information</legend>
-					<label>University</label>
-						<select>
-							<option value="uOttawa">University of Ottawa</option>
-							<option value="uCarleton">Carleton University</option>
-						</select><br />
-						<label>Faculty</label>
-						<select>
-							<option value="eng">Engineering faculty</option>
-							<option value="art">Art faculty</option>
-						</select><br />
-						<label>Telephone number</label>
-						<input type="tel" placeholder="telephone number (this is optionnal)" name="tel"/><br />
-				</fieldset>
-				<button type="submit" class="pure-button pure-button-primary">Submit</button>
-			</form>
-			<div>
-				<a class="pure-button" href="/">
-					<i class="fa fa-long-arrow-left"></i>
-					Back
-				</a>
-			</div>
-		</div>
-		<div class="pure-u-6-24">
-		</div>
 	</div>
 </div>
 
